# Read_CAN_RT_strip

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  can_handler.py  can_sniffer.py  config.py  data_processor.py  fast_reader.c  fast_reader.pyd  hardware_test.py  index.html  log_writer.py  main.py  main_diag.py  pyproject.toml  setup.py  utils.py
linuxcan/canlib/: libcanlib.so.1.10.11
linuxcan/canlib/examples/: busparams  busstat  cancount  canfdmonitor  canfdwrite  canfdwrite_loop  canmonitor  getch  listChannels  readTimerTest  simplewrite  timedomains  writeloop
linuxcan/common/: ..module-common.o.cmd  .Module.symvers.cmd  .VCanOsIf.o.cmd  .VCanOsIf.o.d  .capabilities.o.cmd  .capabilities.o.d  .dlc.o.cmd  .dlc.o.d  .kvcommon.ko.cmd  .kvcommon.mod.cmd  .kvcommon.mod.o.cmd  .kvcommon.o.cmd  .modules.order.cmd  .objbuf.o.cmd  .queue.o.cmd  .queue.o.d  .softsync.o.cmd  .softsync.o.d  .ticks.o.cmd  .ticks.o.d  .util.o.cmd  .util.o.d  Module.symvers  kvcommon.ko  kvcommon.mod  kvcommon.mod.c  modules.order
linuxcan/kvflash/canlib/: kv_flash_prog
linuxcan/leaf/: ..module-common.o.cmd  .Module.symvers.cmd  .leaf.ko.cmd  .leaf.mod.cmd  .leaf.mod.o.cmd  .leaf.o.cmd  .leafHWIf.o.cmd  .modules.order.cmd  leaf.ko  leaf.mod  leaf.mod.c  modules.order
linuxcan/linlib/: liblinlib.so.1.6.16  linlib.d
linuxcan/mhydra/: ..module-common.o.cmd  .Module.symvers.cmd  .ioctl_handler.o.cmd  .mhydra.ko.cmd  .mhydra.mod.cmd  .mhydra.mod.o.cmd  .mhydra.o.cmd  .mhydraHWIf.o.cmd  .mhydraHWIf_TRP.o.cmd  .modules.order.cmd  mhydra.ko  mhydra.mod  mhydra.mod.c  modules.order
linuxcan/pcican/: ..module-common.o.cmd  .Module.symvers.cmd  .PciCanHwIf.o.cmd  .dallas.o.cmd  .kvpcican.ko.cmd  .kvpcican.mod.cmd  .kvpcican.mod.o.cmd  .kvpcican.o.cmd  .modules.order.cmd  kvpcican.ko  kvpcican.mod  kvpcican.mod.c  modules.order
linuxcan/pcican2/: ..module-common.o.cmd  .Module.symvers.cmd  .PciCan2HwIf.o.cmd  .kvpcicanII.ko.cmd  .kvpcicanII.mod.cmd  .kvpcicanII.mod.o.cmd  .kvpcicanII.o.cmd  .memQ.o.cmd  .modules.order.cmd  kernel_ver  kvpcicanII.ko  kvpcicanII.mod  kvpcicanII.mod.c  modules.order
linuxcan/pciefd/: ..module-common.o.cmd  .Module.symvers.cmd  .kvpciefd.ko.cmd  .kvpciefd.mod.cmd  .kvpciefd.mod.o.cmd  .kvpciefd.o.cmd  .modules.order.cmd  .pciefd_hwif.o.cmd  kvpciefd.ko  kvpciefd.mod  kvpciefd.mod.c  modules.order
linuxcan/pciefd/drivers/altera/HAL/src/: .altera_avalon_epcs_flash_controller.o.cmd  .altera_avalon_spi.o.cmd  .epcs_commands.o.cmd
linuxcan/pciefd/drivers/kvaser/hydra_flash/: .hydra_flash.o.cmd
linuxcan/pciefd/drivers/kvaser/pciefd/: .pciefd.o.cmd  .pciefd_packet.o.cmd  .pciefd_rx_fifo.o.cmd
linuxcan/pciefd/drivers/kvaser/pwm/: .pwm_util.o.cmd
linuxcan/pciefd/drivers/kvaser/spi/sf2_spi/: .sf2_spi.o.cmd
linuxcan/pciefd/drivers/kvaser/spi_flash/: .spi_flash.o.cmd  .spi_flash_altera.o.cmd  .spi_flash_dummy.o.cmd  .spi_flash_sf2.o.cmd  .spi_flash_xilinx.o.cmd
linuxcan/pciefd/drivers/xilinx/spi/src/: .xspi.o.cmd  .xspi_options.o.cmd
linuxcan/pciefd/hw/: .pciefd_altera.o.cmd  .pciefd_sf2.o.cmd  .pciefd_xilinx.o.cmd
linuxcan/usbcanII/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .usbcanHWIf.o.cmd  .usbcanII.ko.cmd  .usbcanII.mod.cmd  .usbcanII.mod.o.cmd  .usbcanII.o.cmd  modules.order  usbcanII.ko  usbcanII.mod  usbcanII.mod.c
linuxcan/virtualcan/: ..module-common.o.cmd  .Module.symvers.cmd  .kvvirtualcan.ko.cmd  .kvvirtualcan.mod.cmd  .kvvirtualcan.mod.o.cmd  .kvvirtualcan.o.cmd  .modules.order.cmd  .virtualcan.o.cmd  kvvirtualcan.ko  kvvirtualcan.mod  kvvirtualcan.mod.c  modules.order
